--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -59,7 +59,7 @@
         </div>
 
         <div class="gaoshou">
-            <div class="GS_box">
+            <div class="GS_box" style="display:none;">
                 <ul class="GS_nav">
                     <li class="current"><a href="javascript:;">第一球大小</a></li>
                     <li><a href="javascript:;">第一球单双</a></li>
@@ -401,7 +401,7 @@
                                                     
                                                     
                                                     
-                                                    <tr>
+                                                        <tr>
                                                             <td width="20%" align="center"><font>@plan.ShowSort</font></td>
                                
                                                           
