--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -27,7 +27,7 @@
 <body>
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">开奖</a>
     </header>
 
