--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using C8.Lottery.Model
+@{
     Layout = null;
     int lType = ViewBag.lType;
 }
@@ -18,6 +19,8 @@
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/public.js"></script>
     <script type="text/javascript" src="/js/bet.js"></script>
+    
+    <script type="text/javascript" src="/js/runTime2.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
@@ -27,13 +30,42 @@
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">@ViewBag.lotteryName</a>
-        <a href="javascript:;" class="SX_A">规则</a>
+        <a href="/Plan/Rule/@ViewBag.lType" class="SX_A">规则</a>
     </header>
 
     <div class="WanFa_header">
         <div class="WanFa_hdInfo1">
             <h3>@Html.Raw(ViewBag.issueDesc)</h3>
-            <p>距离开奖时间<span>23:40:30</span></p>
+            
+            @*<p>距离开奖时间<span>23:40:30</span></p>*@
+            
+            <p class="hdM_ddtime f-r">下期开奖：
+                            
+                @if (ViewBag.time == "正在开奖")
+                {
+                    <span id="openTime">正在开奖</span>
+                }
+                else
+                {
+                    if (lType < 9)
+                    {
+                        <span id="openTime"><t id="hour2">@ViewBag.hour</t>:<t id="minute2">@ViewBag.min</t>:<t id="second2">@ViewBag.sec</t></span>
+                    }
+                    else
+                    {
+                        <span id="openTime"><t id="minute2">@ViewBag.min</t>:<t id="second2">@ViewBag.sec</t></span>
+                    }
+
+                }
+
+            </p>
+
+            
+            
+            
+            
+
+
             <div style="clear:both;"></div>
         </div>
         <div class="WanFa_hdInfo2">
@@ -42,15 +74,17 @@
             <div class="WF_hdIf2R">
                 
                 @{
-                    
+                    string num = ViewBag.lastNum;
+                    string[] numArr = num.Split(',');
+                    foreach (string s in numArr)
+                    {
+                        <span class="WF_spA WF_spAhWU">@s</span>
+                    }
                 }
                 
 
-                <span class="WF_spA WF_spAhWU">01</span>
-                <span class="WF_spA WF_spAhWU">01</span>
-                <span class="WF_spA WF_spAhWU">01</span>
-                <span class="WF_spA WF_spAhWU">01</span>
-                <span class="WF_spA WF_spAhWU">01</span>
+                
+             
             </div>
         </div>
     </div>
@@ -982,63 +1016,37 @@
         <table width="100%" border="0" class="WanFa_TableB">
             <thead>
                 <tr>
-                    <th width="26%" align="center" valign="middle" scope="col">期次</th>
+                    <th width="40%" align="center" valign="middle" scope="col">期次</th>
                     <th align="center" valign="middle" scope="col">开奖号码</th>
                 </tr>
             </thead>
             <tbody>
+                
+                
+                @foreach (LotteryRecord lr in ViewBag.lastFive)
+                {
+
+                    string desc = "第" + lr.Issue + "期";
+                    numArr = lr.Num.Split(',');
+                    
+                    <tr>
+                        <td align="center" valign="middle">@desc</td>
+                        <td align="center" valign="middle">
+                            
+                            @foreach (string s in numArr)
+                            {
+                                <span class="History_sp">@s</span>
+                            }
+                       
+                        </td>
+                    </tr>
+                    
+                }
+
+                
+               
                 <tr>
-                    <td align="center" valign="middle">第20170904期</td>
-                    <td align="center" valign="middle">
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" valign="middle">第20170904期</td>
-                    <td align="center" valign="middle">
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" valign="middle">第20170904期</td>
-                    <td align="center" valign="middle">
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" valign="middle">第20170904期</td>
-                    <td align="center" valign="middle">
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" valign="middle">第20170904期</td>
-                    <td align="center" valign="middle">
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                        <span class="History_sp">01</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" align="center" valign="middle"><a href="javascript:;" class="WanFa_TBbtn">点击查看更多开奖历史>></a></td>
+                    <td colspan="2" align="center" valign="middle"><a href="/Record/OpenRecord/?lType=@ViewBag.lType" target="_blank" class="WanFa_TBbtn">点击查看更多开奖历史>></a></td>
                 </tr>
             </tbody>
         </table>
