--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Forget.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Forget.cshtml
@@ -105,7 +105,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">忘记密码</a>
         <a href="/Home" class="hjc_backindex"></a>
     </header>
