--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -72,7 +72,7 @@
         </header>
 
         <div class="hjc_hdNav fixed" style="display: none">
-
+            <input type="hidden" id="lType" value="@lType"/>
             <div class="hdNav_cai_expand">
                 <ul class="hdNav_cai">
                     @foreach (LotteryType entity in ViewBag.LotteryTypeList)
