计划首页添加按钮切换

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -661,11 +661,11 @@
                     empty: {
                         icon: "/images/null.png",
                         tip: "暂无高手推荐~",
-                        //btntext: "去看看免费专家 >", //按钮,默认""
-                        //btnClick: function () {
-                        //    $(".C8_nav5 li:eq(2)").trigger("click");
-                        //    alertmsg("点击免费专家切换");
-                        //}
+                        btntext: "去看看免费专家 >", //按钮,默认""
+                        btnClick: function () {
+                            $(".C8_nav5 li:eq(2)").trigger("click");
+                            //alertmsg("点击免费专家切换");
+                        }
                     },
                     clearEmptyId: "datalist0",
                     toTop: {
@@ -691,11 +691,11 @@
                         empty: {
                             icon: "/images/null.png",
                             tip: "暂无免费专家~",
-                            //btntext: "去看看高手推荐 >", //按钮,默认""
-                            //btnClick: function () {
-                            //    $(".C8_nav5 li:eq(1)").trigger("click");
-                            //    alertmsg("点击免费专家切换");
-                            //}
+                            btntext: "去看看高手推荐 >",
+                            btnClick: function () {
+                                $(".C8_nav5 li:eq(1)").trigger("click");
+                                //alertmsg("点击高手推荐切换");
+                            }
                         },
                         clearEmptyId: "datalist1",
                         toTop: {
